--- a/index.html
+++ b/index.html
@@ -798,15 +798,17 @@ form button:hover {
 
   <script>
     // Replace below config with YOUR Firebase project's config
-    const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      databaseURL: "https://YOUR_PROJECT_ID-default-rtdb.firebaseio.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_SENDER_ID",
-      appId: "YOUR_APP_ID"
-    };
+  const firebaseConfig = {
+  apiKey: "AIzaSyAK6N5JVDh9umaWlij8h5SfD-DG2jH98YU",
+  authDomain: "satakshi-954cc.firebaseapp.com",
+  databaseURL: "https://satakshi-954cc-default-rtdb.asia-southeast1.firebasedatabase.app",
+  projectId: "satakshi-954cc",
+  storageBucket: "satakshi-954cc.firebasestorage.app",
+  messagingSenderId: "43610883217",
+  appId: "1:43610883217:web:0704adc06fa5f945942b30",
+  measurementId: "G-TQCTFJW432"
+};
+
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
