--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@ form button:hover {
     <div id="feedback-modal">
       <div>
         <h2>Leave Your Feedback</h2>
-        <input type="text" id="feedback-name" placeholder="Your Name" style="color: yellow; " />
+        <input type="text" id="feedback-name" placeholder="Your Name" >
 
         <textarea id="feedback-message" placeholder="Your feedback..." rows="4"></textarea>
         <button id="feedback-submit-btn" onclick="submitFeedback()">Submit</button>
