--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@ form button:hover {
   font-size: 1.1rem;
 }
 
-  
+      body { font-family: Arial, sans-serif; margin: 20px; }
     #feedback-modal > div {
       background: white;
       padding: 30px;
