--- a/index.html
+++ b/index.html
@@ -573,6 +573,9 @@ form button:hover {
 
       body { font-family: Arial, sans-serif; margin: 20px; }
     #feedback-modal > div {
+      display: none;
+  position: fixed;
+  top: 0; left: 0;
       background: white;
       padding: 30px;
       border-radius: 10px;
