--- a/index.html
+++ b/index.html
@@ -512,6 +512,7 @@ form button:hover {
 
 #reviews {
   background-color: #fefefe; 
+  border
   padding: 60px 40px;
   text-align: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -736,19 +737,6 @@ form button:hover {
 <section id="reviews">
   <h1>What Our Clients Say</h1>
   <div class="reviews-container">
-    <div class="review-box">
-      <p>"Shatakshi Digitech transformed how we communicate with our customers. Reliable and fast service!"</p>
-      <h3>- Priya S.</h3>
-    </div>
-    <div class="review-box">
-      <p>"Exceptional support and scalable solutions. Highly recommended for any business."</p>
-      <h3>- Rahul M.</h3>
-    </div>
-    <div class="review-box">
-      <p>"The bulk messaging feature helped us increase our campaign reach massively."</p>
-      <h3>- Neha K.</h3>
-    </div>
-    
   </div>
   <button class="leave-feedback-btn" onclick="openFeedbackForm()">Leave Feedback</button>
     
