--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background-color: #515d7a; 
+  background-color: #27385f; 
   padding: 30px 40px;
   box-shadow: 0 3px 8px rgba(0,0,0,0.15);
   position: sticky;
