--- a/index.html
+++ b/index.html
@@ -760,8 +760,18 @@ form button:hover {
         <p><b>Email:</b><a href="mailto:abcstakshi@gmail.com"> abcstakshi@gmail.com</a></p>
         <p><b>Address:</b> 1, Shree Ram Anugrah Jang Bahadur Mishra Chawl no1, Ghartanpada, Hanuman Nagar, S P Road, Dahisar East, Mumbai - 400068</p>
       </div>
-      <form action="https://formsubmit.co/your-email@example.com" method="POST">
-        <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html" />
+     
+<form
+        action="https://formsubmit.co/naiksiddhics232410@gmail.com"
+        method="POST"
+ style="flex: 1 1 100%; min-width: 0; display: flex; flex-direction: column; gap: 15px;"
+      >
+<input type="hidden" name="_next" value="https://siddhi124github.github.io/satkshi/thankyou.html" />
+
+  
+        <!-- Disable captcha -->
+        <input type="hidden" name="_captcha" value="false">
+        
         <input type="text" id="name" minlength="3" maxlength="40" placeholder="Name" required />
         <input type="email" id="email" placeholder="Email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" title="Please enter a valid email address" />
         <textarea rows="5" id="address" minlength="10" maxlength="100" placeholder="Address" required></textarea>
