--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body {
 
 nav {
   display: flex;
+  width:100vw;
   align-items: center;
   justify-content: space-between;
   background-color: #27385f; 
@@ -115,6 +116,7 @@ nav ul li a:focus {
   background-position: center;
   background-size: cover;
   height: 100vh;
+  width:100vw;
   color: #ecf0f1;
   display: flex;
   align-items: center;
