--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@ form button:hover {
   <header>
   <nav>
     <a href="#home">
-      <img src="loggo.png" alt="Company Logo">
+      <img src="Flux_Dev_Design_a_logo_for_a_tech_company_named_Satakshi_Digit_0.jpg" alt="Company Logo">
     </a>
     
     <!-- Hamburger Icon -->
