--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@ nav {
 
 nav img {
   height: 45px;
-  filter: brightness(0) invert(1); /* invert logo colors for dark bg */
+  filter:none;
+
 }
 
 nav ul {
