--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@ nav {
 }
 
 nav img {
-  height: 45px;
+  height: 50px;
   filter:none;
-  width: 55px;
+  width: 60px;
 
 }
 
@@ -643,7 +643,7 @@ form button:hover {
   <header>
   <nav>
     <a href="#home">
-      <img src="Flux_Dev_Design_a_logo_for_a_tech_company_named_Satakshi_Digit_0.jpg" alt="Company Logo">
+      <img src="satakshi logo.PNG" alt="Company Logo">
     </a>
     
     <!-- Hamburger Icon -->
