--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
 nav {
   display: flex;
-  width:100vw;
+  width:100%;
   align-items: center;
   justify-content: space-between;
   background-color: #27385f; 
