--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ nav ul li a:focus {
   #nav-menu {
     display: none;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     background-color: #202635;
     position: absolute;
     top: 100%;
@@ -109,7 +109,6 @@ nav ul li a:focus {
     width: 100%;
   }
 }
-
 
 /* Home Section */
 #home {
