--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <title>SHATAKSHI DIGITECH</title>
   <style>
-    
+   *, *::before, *::after {
+  box-sizing: border-box;
+} 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
@@ -18,7 +20,7 @@ body {
 }
 @media (max-width: 768px) {
   .container {
-    width: 90%; 
+    width: 100%; 
     margin: 0 auto;
   }
 }
@@ -39,7 +41,7 @@ nav {
 nav img {
   height: 50px;
   filter:none;
-  width: 100px;
+  width: 95px;
 
 }
 
