--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ nav ul {
 }
 
 nav ul li a {
-  color: #ecf0f1; /* Light grey */
+  color: #ecf0f1; 
   font-weight: 600;
   text-decoration: none;
   padding: 8px 15px;
